pkgdown page update

--- a/_pkgdown.yml
+++ b/_pkgdown.yml
@@ -10,6 +10,7 @@ reference:
       - data_beetle
       - data_bird
       - data_fish
+      - data_herp_bycatch
       - data_macroinvertebrate
       - data_mosquito
       - data_plant
