--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -34,4 +34,6 @@ Imports:
 Suggests: 
     tidyverse,
     neonUtilities,
-    lubridate
+    lubridate,
+    testthat (>= 3.0.0)
+Config/testthat/edition: 3
